<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/colorLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin"
    tools:context=".ColorActivity">

    <TextView
        style="@style/LabelStyle"
        android:id="@+id/redLabel"
        android:text="@string/red" />

    <SeekBar
        android:id="@+id/redSeekBar"
        style="@style/ColorSeekBarStyle" />

    <TextView
        style="@style/LabelStyle"
        android:id="@+id/greenLabel"
        android:text="@string/green" />

    <SeekBar
        android:id="@+id/greenSeekBar"
        style="@style/ColorSeekBarStyle" />

    <TextView
        style="@style/LabelStyle"
        android:id="@+id/blueLabel"
        android:text="@string/blue" />

    <SeekBar
        android:id="@+id/blueSeekBar"
        style="@style/ColorSeekBarStyle" />

    <Button
        android:id="@+id/generateButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="20dp"
        android:text="@string/generate" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/save" />

</LinearLayout>